Create Next.js 14 landing page for Plannera.ai

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,3 @@
 {
-  "extends": ["next", "next/typescript"],
-  "settings": {
-    "next": {
-      "rootDir": ["src/*/"]
-    }
-  },
-  "rules": {
-    "@next/next/no-html-link-for-pages": "off"
-  }
+  "extends": ["next", "next/typescript"]
 }
