--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "plannera-ab",
-  "version": "0.1.0",
+  "name": "plannera-app",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint ."
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "14.2.33",
@@ -22,6 +22,6 @@
     "eslint-config-next": "14.2.33",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
