--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
+    "@prisma/client": "^6.19.0",
     "next": "14.2.33",
+    "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.10",
+    "prisma": "^6.19.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
