--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ EMAIL_SERVER_PORT="587"
 EMAIL_SERVER_USER="apikey"
 EMAIL_SERVER_PASSWORD="super-secret"
 EMAIL_FROM="Plannera <auth@plannera.ai>"
+AUTH_TRUST_HOST=true
