--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.0",
+    "lucide-react": "^0.553.0",
     "next": "14.2.33",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
