--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemailer": "^7.0.10",
     "prisma": "^6.19.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
