--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prisma": "^6.19.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-markdown": "^10.1.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
