Setup Prisma schema and Vercel database integration (manual DATABASE_URL required)

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Pull the live connection string via `vercel env pull .env` or copy it from
+# Vercel → Project → Settings → Environment Variables → DATABASE_URL.
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="replace-with-strong-secret"
