--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.33",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
+    "openai": "^6.8.1",
     "prisma": "^6.19.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
