--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "node ./scripts/prisma-generate.js && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "legislation:ingest": "tsx scripts/legislation-ingest.ts",
+    "legislation:sync": "tsx scripts/legislation-sync.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
@@ -14,6 +16,7 @@
     "lucide-react": "^0.553.0",
     "next": "14.2.33",
     "next-auth": "^4.24.13",
+    "node-html-parser": "^7.0.1",
     "nodemailer": "^7.0.10",
     "openai": "^6.8.1",
     "prisma": "^6.19.0",
@@ -32,6 +35,7 @@
     "eslint-config-next": "14.2.33",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.6",
     "typescript": "^5.6.3"
   }
 }
