feat: integrate NSW planning data feeds

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ EMAIL_SERVER_USER="apikey"
 EMAIL_SERVER_PASSWORD="super-secret"
 EMAIL_FROM="Plannera <auth@plannera.ai>"
 AUTH_TRUST_HOST=true
+NSW_PROPERTY_API_URL="https://api.planningportal.nsw.gov.au/property"
+NSW_PROPERTY_API_KEY="replace-with-nsw-key"
+NSW_WATER_API_URL="https://api.planningportal.nsw.gov.au/water"
+NSW_WATER_API_KEY="replace-with-nsw-key"
+NSW_TRADES_API_URL="https://api.planningportal.nsw.gov.au/trades"
+NSW_TRADES_API_KEY="replace-with-nsw-key"
