--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "legislation:ingest": "tsx scripts/legislation-ingest.ts",
-    "legislation:sync": "tsx scripts/legislation-sync.ts"
+    "legislation:sync": "tsx scripts/legislation-sync.ts",
+    "nsw:data:test": "tsx scripts/nsw-data-check.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
