--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "node ./scripts/prisma-generate.js && next build",
     "start": "next start",
     "lint": "next lint",
-    "legislation:ingest": "tsx scripts/legislation-ingest.ts",
-    "legislation:sync": "tsx scripts/legislation-sync.ts",
+    "ingest:legislation": "tsx scripts/legislation-ingest.ts",
+    "refresh:legislation": "tsx scripts/refresh-legislation.ts",
+    "sync:legislation": "tsx scripts/legislation-sync.ts",
     "nsw:data:test": "tsx scripts/nsw-data-check.ts"
   },
   "dependencies": {
