--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "node ./scripts/prisma-generate.js && next build",
     "start": "next start",
     "lint": "next lint",
+    "fetch:nsw-xml": "tsx scripts/fetch-nsw-xml.ts",
     "ingest:legislation": "tsx scripts/legislation-ingest.ts",
+    "ingest:all-nsw": "tsx scripts/ingest-all-nsw.ts",
     "refresh:legislation": "tsx scripts/refresh-legislation.ts",
     "sync:legislation": "tsx scripts/legislation-sync.ts",
+    "legislation:coverage": "tsx scripts/legislation-coverage.ts",
     "nsw:data:test": "tsx scripts/nsw-data-check.ts"
   },
   "dependencies": {
