--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "fetch:nsw-xml": "tsx scripts/fetch-nsw-xml.ts",
     "ingest:legislation": "tsx scripts/legislation-ingest.ts",
     "ingest:all-nsw": "tsx scripts/ingest-all-nsw.ts",
+    "ingest:sepps": "tsx scripts/ingest-sepps.ts",
     "refresh:legislation": "tsx scripts/refresh-legislation.ts",
+    "refresh:sepps": "tsx scripts/refresh-sepps.ts",
     "sync:legislation": "tsx scripts/legislation-sync.ts",
     "legislation:coverage": "tsx scripts/legislation-coverage.ts",
+    "sepp:smoke": "tsx scripts/sepp-smoke-test.ts",
     "nsw:data:test": "tsx scripts/nsw-data-check.ts"
   },
   "dependencies": {
