--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "node ./scripts/prisma-generate.js && next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "tsx --test tests/map-snapshot.test.ts",
     "fetch:nsw-xml": "tsx scripts/fetch-nsw-xml.ts",
     "ingest:legislation": "tsx scripts/legislation-ingest.ts",
     "ingest:all-nsw": "tsx scripts/ingest-all-nsw.ts",
