Improve workspace upload error handling

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,4 @@ NSW_WATER_API_URL="https://api.planningportal.nsw.gov.au/water"
 NSW_WATER_API_KEY="replace-with-nsw-key"
 NSW_TRADES_API_URL="https://api.planningportal.nsw.gov.au/trades"
 NSW_TRADES_API_KEY="replace-with-nsw-key"
+BLOB_READ_WRITE_TOKEN="vercel-blob-token"
