--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.0",
+    "@vercel/blob": "^2.0.0",
     "lucide-react": "^0.553.0",
     "next": "14.2.33",
     "next-auth": "^4.24.13",
