--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node-html-parser": "^7.0.1",
     "nodemailer": "^7.0.10",
     "openai": "^6.8.1",
+    "pdf-parse": "^1.1.1",
     "prisma": "^6.19.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
