--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="replace-with-strong-secret"
+APP_URL="http://localhost:3000"
+MAGIC_LINK_SECRET="replace-with-strong-secret"
+RESEND_API_KEY=""
 EMAIL_SERVER_HOST="smtp.example.com"
 EMAIL_SERVER_PORT="587"
 EMAIL_SERVER_USER="apikey"
