fix: derive magic link base url fallback

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="replace-with-strong-secret"
+# Optional override for magic-link base URL.
+# If not set, the app will fall back to VERCEL_URL or the incoming request origin.
 APP_URL="http://localhost:3000"
 MAGIC_LINK_SECRET="replace-with-strong-secret"
 RESEND_API_KEY=""
